--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,10 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
-                        <version>2.1.1</version>
+                        <version>3.3.1</version>
                         <configuration>
                             <warName>ROOT</warName>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
                         </configuration>
                     </plugin>
                     <plugin>
